--- a/README
+++ b/README
@@ -23,6 +23,14 @@ Although modification was required to remove the first 16 colors (as they vary
 from term to term and are normally user configurable) and fix the range of the
 grey ramp.
 
+Requirements:
+ImageMagick
+	<http://www.imagemagick.org/>
+cowsay (to display generated cowfiles)
+	<http://www.nog.net/~tony/warez/cowsay.shtml>
+The GIMP (to use the provided palette)
+	<http://www.gimp.org/>
+
 To install, simply run:
 make
 sudo make install
