--- a/README
+++ b/README
@@ -2,7 +2,8 @@ img2xterm - A program which can convert bitmap images to a series of control
 sequences and block characters suitable for display on many popular 256-color
 terminal emulators, including xterm, rxvt-unicode and GNU Screen.
 
-Inspration was taken from the img2cow software available here:
+Inspration was taken from lachs0r's img2cow software available here, which was
+in turn based on Xebec's BMP2ANSI:
 
 http://srsfckn.biz/cows/img2cow.c
 
@@ -16,9 +17,8 @@ Wolfgang Frisch's (xororand@frexx.de) xterm256-conv, available here:
 
 http://frexx.de/xterm-256-notes/
 
-Modification was required to remove the first 16 colors (as they vary
-from term to term and are normally user configurable) and fix the range of the
-grey ramp.
+Modification was required to remove the first 16 colors (as they vary from term
+to term and are normally user configurable) and fix the range of the grey ramp.
 
 DEPENDENCIES
 Ncurses (for terminfo support, unless NO_CURSES is defined)
