Added gamma description to manfile

--- a/man6/img2xterm.6
+++ b/man6/img2xterm.6
@@ -14,6 +14,10 @@ and similar terminal emulators.
 generate a cowfile header
 (default behavior if invoked as img2cow)
 .TP
+\fB\-g\fR, \fB\-\-gamma\fR [value]
+display gamma to be used when decoding
+the image (default: 1.0)
+.TP
 \fB\-h\fR, \fB\-\-help\fR
 display this message
 .TP
